--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/remenyi/kepviselovalaszto#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "bootstrap": "^5.0.1",
+    "bootstrap-icons": "^1.6.1",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "jquery": "^3.6.0"
   }
 }
