--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "## Az alkalmazás célja",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +22,10 @@
     "bootstrap-icons": "^1.6.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "mongoose": "^6.0.12"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
