Change container names

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-version: '1'
+version: '3.3'
 services:
   node:
     image: node
-    container_name: node
+    container_name: kepviselovalaszto-node
     command: >
       sh -c "npm i
              npm run dev"
@@ -17,12 +17,9 @@ services:
     
   mongo:
     image: mongo
-    container_name: mongo
+    container_name: kepviselovalaszto-mongo
     restart: unless-stopped
     ports:
       - 27017:27017
     volumes:
-      - mongodb:/data/db
-
-volumes:
-  mongodb:
+      - ./mongo-data/db:/data/db
